output/facebook/rocksdb/312.txt
make check 

db/db_test.cc: In member function ‘void rocksdb::_Test_MinLevelToCompress1::_Run()’:
db/db_test.cc:4118:46: error: ‘type’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       options.compression_per_level[i] = type;
                                              ^
db/db_test.cc: In member function ‘void rocksdb::_Test_MinLevelToCompress2::_Run()’:
db/db_test.cc:4139:44: error: ‘type’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     options.compression_per_level[i] = type;

This is because in these functions

```
TEST(DBTest, MinLevelToCompress1) {...
TEST(DBTest, MinLevelToCompress2) {...
```

this

```
CompressionType type; 
```

is initialized here

```
if (!MinLevelToCompress(type, options, -14, -1, 0)) {

```

And used right here, but the compiler sends a fail thar turns into error

```
    for (int i = 2; i < options.num_levels; i++) {
      options.compression_per_level[i] = *type;
    }
```

i make this change and works

```
TEST(DBTest, MinLevelToCompress1) {
  Options options = CurrentOptions();
  CompressionType * type = new CompressionType(); //4106
  if (MinLevelToCompress(*type, options, -14, -1, 0)) {
    Reopen(&options);
    MinLevelHelper(this, options);

    // do not compress L0 and L1
    for (int i = 0; i < 2; i++) {
      options.compression_per_level[i] = kNoCompression;
    }
    for (int i = 2; i < options.num_levels; i++) {
      options.compression_per_level[i] = *type;
    }
    DestroyAndReopen(&options);
    MinLevelHelper(this, options);
  }
  delete type;
}
```

